--- a/notebooks/slm.ipynb
+++ b/notebooks/slm.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sh20022002/small-Language-Model/blob/main/slm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -23,11 +23,7 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-2044988e-6667-478a-80b7-1fe9bafa0823\" name=\"files[]\" multiple disabled\n",
@@ -212,21 +208,25 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving tokenizer.zip to tokenizer (3).zip\n"
           ]
         }
       ],
       "source": [
-        "from google.colab import files\n",
-        "uploaded = files.upload()\n"
+        "%pip install -q \"git+https://github.com/sh20022002/small-Language-Model.git@main#subdirectory=src/my_slm\"\n",
+        "tok_path = \"/content/repo/src/my_slm/data/'tokenizer_state.pkl.gz\""
       ]
     },
     {
@@ -238,90 +238,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "5Jwk6myk_LdW"
-      },
-      "outputs": [],
-      "source": [
-        "import zipfile, os, sys\n",
-        "\n",
-        "# Unzip the uploaded file\n",
-        "with zipfile.ZipFile(\"tokenizer.zip\", 'r') as zip_ref:\n",
-        "    zip_ref.extractall(\"tokenizer\")\n",
-        "\n",
-        "# Add to sys.path so Python can find your modules\n",
-        "sys.path.append(os.path.abspath(\"tokenizer\"))\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7PVnUPYb_izK",
-        "outputId": "c5ec576a-db5b-45d0-bbb8-a6c26221135d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: datasets in /usr/local/lib/python3.12/dist-packages (4.0.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from datasets) (3.19.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.12/dist-packages (from datasets) (2.0.2)\n",
-            "Requirement already satisfied: pyarrow>=15.0.0 in /usr/local/lib/python3.12/dist-packages (from datasets) (18.1.0)\n",
-            "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.12/dist-packages (from datasets) (0.3.8)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from datasets) (2.2.2)\n",
-            "Requirement already satisfied: requests>=2.32.2 in /usr/local/lib/python3.12/dist-packages (from datasets) (2.32.4)\n",
-            "Requirement already satisfied: tqdm>=4.66.3 in /usr/local/lib/python3.12/dist-packages (from datasets) (4.67.1)\n",
-            "Requirement already satisfied: xxhash in /usr/local/lib/python3.12/dist-packages (from datasets) (3.5.0)\n",
-            "Requirement already satisfied: multiprocess<0.70.17 in /usr/local/lib/python3.12/dist-packages (from datasets) (0.70.16)\n",
-            "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2025.3.0)\n",
-            "Requirement already satisfied: huggingface-hub>=0.24.0 in /usr/local/lib/python3.12/dist-packages (from datasets) (0.34.4)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from datasets) (25.0)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.12/dist-packages (from datasets) (6.0.2)\n",
-            "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (3.12.15)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.24.0->datasets) (4.14.1)\n",
-            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.24.0->datasets) (1.1.7)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (3.4.3)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets) (2025.8.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas->datasets) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas->datasets) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas->datasets) (2025.2)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2.6.1)\n",
-            "Requirement already satisfied: aiosignal>=1.4.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.4.0)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (25.3.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.7.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (6.6.4)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (0.3.2)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (1.20.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install datasets"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
         "id": "4XQ6zz2M_rqQ",
-        "outputId": "916e2302-9525-4c7b-c073-dc173477a6ec",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "916e2302-9525-4c7b-c073-dc173477a6ec"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
             "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
@@ -334,49 +262,20 @@
       ],
       "source": [
         "from datasets import load_dataset\n",
+        "\n",
+        "from functools import partial\n",
+        "\n",
+        "from torch.optim import AdamW\n",
+        "from torch.nn.utils.rnn import pad_sequence\n",
+        "\n",
+        "from my_slm import HybridTokenizer, Transformer, train_model\n",
+        "import torch\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from torch.utils.data import DataLoader, Dataset\n",
+        "\n",
+        "\n",
         "dataset = load_dataset(\"tatsu-lab/alpaca\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "x4P0-LBiCAKz",
-        "outputId": "901884a4-1470-4674-d49e-3e2c86bb58ef"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Dataset({\n",
-              "    features: ['instruction', 'input', 'output', 'text'],\n",
-              "    num_rows: 52002\n",
-              "})"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ],
-      "source": [
-        "dataset['train']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "QZcWqogcCFdD"
-      },
-      "outputs": [],
-      "source": [
-        "# @markdown Dependency: 5Jwk6myk_LdW\n",
-        "from tokenizer import HybridTokenizer, Transformer, train_model\n",
-        "import torch"
       ]
     },
     {
@@ -392,47 +291,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hN1o4ur9ZdkD",
-        "outputId": "7c29bc8b-2faa-455f-d5d2-2cab36992240"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "create_t_f.py\t       __pycache__  slm.ipynb\t\t    train.py\n",
-            "hybrid_tokeniztion.py  README.md    tokenizer_state.pkl.gz  transformer.py\n",
-            "__init__.py\t       scrshots     tok_test.ipynb\n"
-          ]
-        }
-      ],
-      "source": [
-        "!ls tokenizer/tokenizer/\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "SDckWmn1Zyov"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "kiaSCS4gGc4L"
       },
       "outputs": [],
       "source": [
-        "tok = HybridTokenizer.load('tokenizer/tokenizer/tokenizer_state.pkl.gz')"
+        "tok = HybridTokenizer.load(tok_path)"
       ]
     },
     {
@@ -458,7 +323,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'instruction': 'Describe the character of Romeo from Romeo and Juliet.',\n",
@@ -467,8 +331,9 @@
               " 'text': 'Below is an instruction that describes a task. Write a response that appropriately completes the request.\\n\\n### Instruction:\\nDescribe the character of Romeo from Romeo and Juliet.\\n\\n### Response:\\nRomeo is a tragic hero with a passionate heart. He is brave and impulsive, often making decisions without fully thinking them through. He is deeply romantic and has a heartbreaking loyalty to his family and his beloved, Juliet.'}"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -477,15 +342,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "WaYmMdONbauq"
       },
       "outputs": [],
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from torch.utils.data import DataLoader, Dataset\n",
-        "\n",
         "\n",
         "class QADataset(Dataset):\n",
         "    def __init__(self, data, tokenizer, max_length=256):\n",
@@ -516,7 +378,7 @@
         "            \"labels\": label_tensor\n",
         "        }\n",
         "\n",
-        "from torch.nn.utils.rnn import pad_sequence\n",
+        "\n",
         "\n",
         "def collate_fn(batch, pad_id=0, ignore_index=-100):\n",
         "    # 1) pad to [B, T]\n",
@@ -595,20 +457,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "Md1oRXuMNP6q"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "from functools import partial\n",
-        "\n",
-        "from torch.optim import AdamW"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 17,
       "metadata": {
         "id": "_iz1kBN0NP6q"
@@ -643,17 +491,17 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "DWaddWKyNP6q",
-        "outputId": "0ea64e7f-1573-40a2-9c0b-9a20dce0ec7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 401
-        }
+        },
+        "id": "DWaddWKyNP6q",
+        "outputId": "0ea64e7f-1573-40a2-9c0b-9a20dce0ec7d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/5 - Train Loss: 8.0797, Val Loss: 7.4709, Acc: 99.14%\n",
             "Epoch 2/5 - Train Loss: 6.9071, Val Loss: 6.3526, Acc: 99.69%\n",
@@ -663,9 +511,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "TypeError",
           "evalue": "'module' object is not callable",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -695,8 +543,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
