--- a/notebooks/slm.ipynb
+++ b/notebooks/slm.ipynb
@@ -225,8 +225,10 @@
         }
       ],
       "source": [
-        "%pip install -q \"git+https://github.com/sh20022002/small-Language-Model.git@main#subdirectory=src/my_slm\"\n",
-        "tok_path = \"/content/repo/src/my_slm/data/'tokenizer_state.pkl.gz\""
+        "%pip install -q \"git+https://github.com/sh20022002/small-Language-Model.git@main\"           # uses setup.py / pyproject at repo ROOT\n",
+        "\n",
+        "\n",
+        "tok_path = \"/content/repo/src/my_slm/data/'tokenizer_state.pkl.gz\"\n"
       ]
     },
     {
@@ -268,7 +270,9 @@
         "from torch.optim import AdamW\n",
         "from torch.nn.utils.rnn import pad_sequence\n",
         "\n",
-        "from my_slm import HybridTokenizer, Transformer, train_model\n",
+        "from my_slm.hybrid_tokeniztion import HybridTokenizer\n",
+        "from my_slm.transformer import Transformer\n",
+        "from my_slm.train import train_model\n",
         "import torch\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
