--- a/notebooks/tok_test.ipynb
+++ b/notebooks/tok_test.ipynb
@@ -2,27 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "c24daa9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokonazation import HybridTokenizer"
+    "\n",
+    "import sys, pathlib\n",
+    "\n",
+    "repo_root = pathlib.Path.cwd().resolve().parent        # parent of \"notebooks/\"\n",
+    "src_path  = repo_root / \"src\"\n",
+    "assert (src_path / \"my_slm\").exists(), f\"Couldn't find {src_path/'my_slm'} — adjust the path.\"\n",
+    "\n",
+    "sys.path.insert(0, str(src_path))                      # make `src/` importable\n",
+    "\n",
+    "# now import from your package (note the filename spelling!)\n",
+    "from my_slm.hybrid_tokeniztion import HybridTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "689952a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tok = HybridTokenizer.load('tokenizer_state.pkl.gz')"
+    "tok = HybridTokenizer.load(\"../src/my_slm/data/tokenizer_state.pkl.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "016725f6",
    "metadata": {},
    "outputs": [
@@ -30,38 +40,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(643, 1), (473, 1), (2379, 1)]\n",
-      "=== HybridTokenizer DB status ===\n",
-      "• Unique word types collected : 419,344\n",
-      "• Total word occurrences       : 30,325,324\n",
-      "• Candidate bases (≤4 bytes) : 40,782  [cover 55.7% of corpus]\n",
-      "• Special tokens reserved      : 9\n",
-      "• Current token2id size        : 10532 (includes specials + any byte_* added so far)\n",
-      "• Frozen?                      : True\n",
-      "• Preview of top 10 base candidates:\n",
-      "   the         freq=2056703\n",
-      "   of          freq=961637\n",
-      "   in          freq=951424\n",
-      "   and         freq=765674\n",
-      "   a           freq=697413\n",
-      "   is          freq=571168\n",
-      "   to          freq=508248\n",
-      "   was         freq=452967\n",
-      "   it          freq=276510\n",
-      "   he          freq=264899\n",
-      "\n",
-      "  < 90 % of corpus occurrences fit base-token criterion.\n",
-      "   Consider raising byte_limit or adding more data before freezing.\n",
-      "None\n"
+      "[643, 473, 2379, 7, 338, 7127, 7, 8901, 7, 9, 7, 6748, 10510]\n"
      ]
     }
    ],
    "source": [
-    "a = tok.encode('men')\n",
-    "b = tok.encode('the Women')\n",
-    "c =tok.encode('queen')\n",
-    "print( c)\n",
-    "print(tok.db_status())"
+    "a = tok.encode('men', mode='flat')\n",
+    "b = tok.encode('the Women', mode='flat')\n",
+    "c =tok.encode('queen clown ot the car', mode='flat')\n",
+    "print(c)\n",
+    "# print(tok.db_status())"
    ]
   },
   {
@@ -89,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
