--- a/notebooks/tok_test.ipynb
+++ b/notebooks/tok_test.ipynb
@@ -3,6 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d6645fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch: 2.5.1+cu121\n",
+      "built with CUDA: 12.1\n",
+      "cuda available: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(\"torch:\", torch.__version__)\n",
+    "print(\"built with CUDA:\", torch.version.cuda)   # אם None => זו גרסת CPU בלבד\n",
+    "print(\"cuda available:\", torch.cuda.is_available())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "641125e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c24daa9f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "689952a0",
    "metadata": {},
    "outputs": [],
@@ -32,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "016725f6",
    "metadata": {},
    "outputs": [
@@ -40,17 +73,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[643, 473, 2379, 7, 338, 7127, 7, 8901, 7, 9, 7, 6748, 10510]\n"
+      "['qu', 'e', 'en', '<SP>', 'c', 'lown', '<SP>', 'ot', '<SP>', 'the', '<SP>', 'ca', 'byte_114']\n",
+      "queen clown ot the car\n"
      ]
     }
    ],
    "source": [
     "a = tok.encode('men', mode='flat')\n",
     "b = tok.encode('the Women', mode='flat')\n",
-    "c =tok.encode('queen clown ot the car', mode='flat')\n",
-    "print(c)\n",
+    "ids =tok.encode('queen clown ot the car', mode='flat')\n",
+    "print([tok.id2token[i] for i in ids])\n",
+    "print(tok.decode(ids))\n",
     "# print(tok.db_status())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90232d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
