--- a/notebooks/tok_test.ipynb
+++ b/notebooks/tok_test.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "641125e1",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c24daa9f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "689952a0",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "016725f6",
    "metadata": {},
    "outputs": [
@@ -73,17 +73,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['qu', 'e', 'en', '<SP>', 'c', 'lown', '<SP>', 'ot', '<SP>', 'the', '<SP>', 'ca', 'byte_114']\n",
-      "queen clown ot the car\n"
+      "[212] [643, 473, 2379] [317] [6009, 317]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "HybridTokenizer.decode() missing 1 required positional argument: 'seq'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m w \u001b[38;5;241m=\u001b[39mtok\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwoman\u001b[39m\u001b[38;5;124m'\u001b[39m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(a,b,m,w)\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtok\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# print(tok.db_status())\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: HybridTokenizer.decode() missing 1 required positional argument: 'seq'"
      ]
     }
    ],
    "source": [
-    "a = tok.encode('men', mode='flat')\n",
-    "b = tok.encode('the Women', mode='flat')\n",
-    "ids =tok.encode('queen clown ot the car', mode='flat')\n",
-    "print([tok.id2token[i] for i in ids])\n",
-    "print(tok.decode(ids))\n",
+    "a = tok.encode('king', mode='flat')\n",
+    "b = tok.encode('queen', mode='flat')\n",
+    "m =tok.encode('man', mode='flat')\n",
+    "w =tok.encode('woman', mode='flat')\n",
+    "print(a,b,m,w)\n",
+    "# print(tok.decode())\n",
     "# print(tok.db_status())"
    ]
   },
